# Natural-Disasters-CSV-Agent

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: 1900_2021_DISASTERS_Example.csv
mcp_server/: data.py  schema.py  server.py  tools.py
spec/: SPEC.md
spec/tasks/: 01-setup.md  02-data-loader.md  03-schemas.md  04-tools.md  05-mcp-server.md  06-tests.md  07-dial-client.md  08-langchain-agent.md  09-streamlit-ui.md  10-smoke-test.md  11-readme.md  PLAN.md  README.md
tests/: conftest.py  test_data.py  test_tools.py
ui/: agent.py  app.py  llm.py
