[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "csv-chat-bot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # MCP
    "fastmcp>=2.0",
    # Data
    "pandas>=2.1",
    # Validation
    "pydantic>=2.5",
    "pydantic-settings>=2.0",
    # LLM + agent
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "langgraph>=0.3",
    "langchain-mcp-adapters>=0.1",
    # UI
    "streamlit>=1.35",
    "plotly>=5.20",
    # Utilities
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_server*", "ui*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["mcp_server"]
omit = ["tests/*"]
